// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. should render with a caption 1`] = `
<div>
  <div>
    “
  </div>
  <div>
    Some content
  </div>
  <div>
    <div>
      A caption
    </div>
  </div>
</div>
`;

exports[`2. should render without a caption 1`] = `
<div>
  <div>
    “
  </div>
  <div>
    Some content
  </div>
  <div>
    <div>
      
    </div>
  </div>
</div>
`;

exports[`3. should render with a twitter handle 1`] = `
<div>
  <div>
    “
  </div>
  <div>
    Some content
  </div>
  <div>
    <div>
      A caption
    </div>
    <div>
      <IconTwitter
        height={10}
        width={12}
      />
      <TextLink
        target="_blank"
        url="https://twitter.com/@twitter"
      >
        @twitter
      </TextLink>
    </div>
  </div>
</div>
`;
